--- a/.travis.yml
+++ b/.travis.yml
@@ -2,7 +2,8 @@ language: python
 python:
     - "2.7"
 install: "pip install -r pip-req.txt"
-before_script:'cd server'
+before_script:
+    - cd server
 script:
-    - "py.test tests"
+    - py.test tests
 
